--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -1,5 +1,5 @@
 hibernate.connection.username=root
-hibernate.connection.password=pass
+hibernate.connection.password=pass1234
 hibernate.connection.driver_class=com.mysql.cj.jdbc.Driver
 hibernate.connection.url=jdbc:mysql://localhost:3306/house-manager?createDatabaseIfNotExist=true&useSSL=true
 
